--- a/Kontur.ImageTransformer.Renderer/Kontur.ImageTransformer.Renderer.csproj
+++ b/Kontur.ImageTransformer.Renderer/Kontur.ImageTransformer.Renderer.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9801585B-D1AA-4078-B9C4-7B7F8883E55E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Kontur.ImageTransformer</RootNamespace>
-    <AssemblyName>Kontur.ImageTransformer</AssemblyName>
+    <ProjectGuid>{625D7C11-99AF-4BF7-8328-404BFDCA175B}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Kontur.ImageTransformer.Renderer</RootNamespace>
+    <AssemblyName>Kontur.ImageTransformer.Renderer</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,22 +20,18 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -48,27 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Controller.cs" />
-    <Compile Include="Controllers\HealthController.cs" />
-    <Compile Include="Controllers\ImageProcessingController.cs" />
-    <Compile Include="EntryPoint.cs" />
-    <Compile Include="Middlewares\ImageProcessingMiddleware.cs" />
-    <Compile Include="Middlewares\Middleware.cs" />
-    <Compile Include="Middlewares\Routing\Enums\UriPartType.cs" />
-    <Compile Include="Middlewares\Routing\Models\UriPart.cs" />
-    <Compile Include="Middlewares\Routing\RoutingMiddleware.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AsyncHttpServer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Kontur.ImageTransformer.Renderer\Kontur.ImageTransformer.Renderer.csproj">
-      <Project>{625d7c11-99af-4bf7-8328-404bfdca175b}</Project>
-      <Name>Kontur.ImageTransformer.Renderer</Name>
-    </ProjectReference>
+    <Compile Include="Strategies\GrayscaleStrategy.cs" />
+    <Compile Include="Strategies\IRenderStrategy.cs" />
+    <Compile Include="Strategies\SepiaStrategy.cs" />
+    <Compile Include="Strategies\ThresholdStrategy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
