Config with main logs and improvements added

--- a/Kontur.ImageTransformer/App.config
+++ b/Kontur.ImageTransformer/App.config
@@ -1,9 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
     <runtime>
         <gcServer enabled="true" />
     </runtime>
+  
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target xsi:type="File" name="file"
+              fileName="${basedir}/logs/${date:format=yyyy-MM}/${shortdate}.log"
+              layout="${longdate} [${uppercase:${level}}][${logger}] ${message}" />
+      <target xsi:type="File" name="errors"
+              fileName="${basedir}/logs/${date:format=yyyy-MM}/${shortdate}-errors.log"
+              layout="${longdate} [${uppercase:${level}}][${logger}] ${message} ${newline}StackTrace: ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+      <target xsi:type="File" name="crashes"
+              fileName="${basedir}/logs/${date:format=yyyy-MM}/${shortdate}-crashes.log"
+              layout="${longdate} [${uppercase:${level}}][${logger}] ${message} ${newline}StackTrace: ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+      <target xsi:type="ColoredConsole" name="console" layout="${longdate} [${uppercase:${level}}][${logger}] ${message}" >
+        <highlight-word foregroundColor="Red" ignoreCase="true" regex="\b[4-5]{1}\d\d\b"  wholeWords="true" />
+        <highlight-word foregroundColor="Green" ignoreCase="true" regex="\s\b2\d\d\b"  wholeWords="true" />
+      </target>
+      <target xsi:type="ColoredConsole" name="consoleWithStackTrace" layout="${longdate} [${uppercase:${level}}][${logger}] ${message} ${newline}StackTrace: ${exception:format=toString,Data:maxInnerExceptionLevel=10}" >
+        <highlight-word foregroundColor="Red" ignoreCase="true" regex="\b[4-5]{1}\d\d\b"  wholeWords="true" />
+        <highlight-word foregroundColor="Green" ignoreCase="true" regex="\s\b2\d\d\b"  wholeWords="true" />
+      </target>
+    </targets>
+
+    <rules>
+      <logger name="*" level="Error" writeTo="errors"/>
+      <logger name="*" minlevel="Fatal" writeTo="crashes"/>
+      <logger name="*" minlevel="Info"  writeTo="file"/>
+      <!--<logger name="*" levels="Debug,Info,Trace" writeTo="console" />
+      <logger name="*" minlevel="Error" writeTo="consoleWithStackTrace" />-->
+    </rules>
+  </nlog>
 </configuration>
