--- a/Kontur.ImageTransformer/App.config
+++ b/Kontur.ImageTransformer/App.config
@@ -34,9 +34,9 @@
     <rules>
       <logger name="*" level="Error" writeTo="errors"/>
       <logger name="*" minlevel="Fatal" writeTo="crashes"/>
-      <logger name="*" minlevel="Info"  writeTo="file"/>
-      <!--<logger name="*" levels="Debug,Info,Trace" writeTo="console" />
-      <logger name="*" minlevel="Error" writeTo="consoleWithStackTrace" />-->
+      <!--<logger name="*" minlevel="Info"  writeTo="file"/>-->
+      <!--<logger name="*" levels="Debug,Info,Trace" writeTo="console" />-->
+      <!--<logger name="*" minlevel="Error" writeTo="consoleWithStackTrace" />-->
     </rules>
   </nlog>
 </configuration>
